plang/testing/logs/false-incorrect/118/program118.p.p
p56d.

ubIV2 E9B (eLH (sRauW qh VJ Cw V3RoX)) Ky Df :- lJU.


k (meL7 (B) cFRKP) :- zSZQI jcKt1; z6 Bk v XF; xAsV, oa C vN0 (XWZ6) (kgM (U) (r1 (KAT7) (W8)) (Xt) (P)), ybJe zHnEF (j oKQ Bx) (viEzm (R) (GJ8O) kc) (T); itCCG (TY) J, iFKyg; (((aq1 (Y5pWy) (C) (eAD6)))), uNyl QKUDm (yXC) KgMf (WXPd9), (gGG (laAl (xwCo (yu) (R4XE)) (xY QQ (G8I)) zm) NT3Z (dxtyx oxW4 Rr (eQJ (vIcQ) CRo)) (G); o (wSC (G) (pKBQ (asLp eqB r (cE8 (i6I (XxbZt) (NSH2O) (h25KQ MI ynXi XL)) Irg0 Crl MoquO) v4IHb))), (ifMR3 eX)).
yKbF (Do).
yB2 (DO) (H) (m9do KuS (EL) D (d (N))) (gfyvg C c).

xN Ww4 (H2fC) (jiyj H75vJ I) :- (s).

? k55s (s (rP0 (cp6 YD) V3EDD (szNZS (U9jEf) cOfh (u3 d83 lj3k ab)) Aa)) (Bve) (S); vN nolm (rZvpN (p (wC8 Iz) (cG (c2tfy cxp (L)) yzp2)) (Ciu) Z3).

